# django-basic-2022

./: .gitignore  pyproject.toml  requirements.txt
config/: settings.py
pages/: urls.py  views.py
posts/: admin.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_auto_20220224_1619.py  0003_post_slug.py
templates/: about.html  base.html  home.html
templates/posts/: all.html  post_create.html  post_delete.html  post_update.html  single_post.html
