[tool.poetry]
name = "django-basic"
version = "0.1.0"
description = ""
authors = ["Sergey A. <sergey.abramenka@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "~=3.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
